<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMenu"
    android:orientation="vertical"
    android:layout_gravity="center"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:layout_margin="30dp"
            android:textSize="30sp"
            android:gravity="center"
            android:autofillHints="name"
            />

        <EditText
            android:id="@+id/loginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/loginNamelLabel"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/loginPasswordLabel"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"

            />

        <Button
            android:id="@+id/loginBtnAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            />

        <TextView
            android:id="@+id/registerTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerBtn"
            android:layout_margin="15dp"
            android:clickable="true"
            android:textColor="@android:color/holo_red_dark"
            />

        <TextView
            android:id="@+id/forgotTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordBtn"
            android:layout_margin="15dp"
            android:clickable="true"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>